# mwrpy

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  _typos.toml  pyproject.toml  release-version  setup.py
.github/workflows/: docs.yaml  publish.yml  test.yml
docs/: Makefile
docs/source/: conf.py  fileformat.rst  guide.rst  index.rst  installation.rst  mwrpy_processing.rst  overview.rst
mwrpy/: __init__.py  atmos.py  cli.py  constants.py  exceptions.py  mwrpy.py  process_mwrpy.py  rpg_mwr.py  utils.py  version.py
mwrpy/level1/: droplet_mwrpy.py  lev1_meta_nc.py  met_quality_control.py  quality_control.py  rpg_bin.py  tb_offset.py  write_lev1_nc.py
mwrpy/level2/: get_ret_coeff.py  lev2_collocated.py  lev2_meta_nc.py  lwp_offset.py  write_lev2_nc.py
mwrpy/level2/.ipynb_checkpoints/: get_ret_coeff-checkpoint.py  write_lev2_nc-checkpoint.py
mwrpy/plots/: generate_plots.py  plot_meta.py  plot_utils.py  stat_plot.py
mwrpy/site_config/: hatpro.yaml  lhatpro.yaml  lhumpro_u90.yaml
mwrpy/site_config/hyytiala/: config.yaml
mwrpy/site_config/juelich/: config.yaml
mwrpy/site_config/lindenberg/: config.yaml
mwrpy/site_config/lindenberg/coefficients/: HPT_NN_DE_Lindenberg_HATPRO_G5_v121.ret  IWV_NN_MA_DE_Lindenberg_HATPRO_G5_v121.ret  LWP_NN_MA_DE_Lindenberg_HATPRO_G5_v121.ret  SPC_NN_MA_INS_DE_Lindenberg_HATPRO_G5_v121.ret  TEL_NN_DE_Lindenberg_HATPRO_G5_v121.ret  TPT_NN_DE_Lindenberg_HATPRO_G5_v121.ret
mwrpy/site_config/palaiseau/: config.yaml
mwrpy/site_config/palaiseau/coefficients/: HPT_NN_FR_SIRTA_HATPRO_G5_v121.ret  IWV_NN_MA_FR_SIRTA_HATPRO_G5_v121.ret  LWP_NN_MA_FR_SIRTA_HATPRO_G5_v121.ret  SPC_NN_MA_INS_FR_SIRTA_HATPRO_G5_v121.ret  TPB_NN_FR_SIRTA_HATPRO_G5_v121.ret  TPT_NN_FR_SIRTA_HATPRO_G5_v121.ret
paper/: paper.bib  paper.md
tests/: test_file_reading.py  test_get_ret_coeff.py  test_get_ret_coeff_nc.py  test_write_lev1_nc.py  test_write_lev2_nc.py
tests/data/: 230406.IRT  230406.MET
tests/data/hyytiala/: 230406.BLB  230406.BRT  230406.HKD  230406.IRT  230406.LWP  230406.MET
tests/data/juelich/: 230501_210918_zen.bls  230501_210918_zen.brt  230501_210918_zen.hkd  230501_210918_zen.irt  230501_210918_zen.met
