[project]
name = "mwrpy"
description = "Python package for Microwave Radiometer processing in ACTRIS"
authors = [{name = "University of Cologne", email = "actris-ccres-mwr@uni-koeln.de"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "matplotlib",
  "metpy",
  "netCDF4",
  "pandas",
  "pytz",
  "pyyaml",
  "scipy",
  "suncalc",
  "timezonefinder",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["mypy", "pre-commit", "pytest", "pytest-flakefinder", "types-PyYAML", "types-pytz"]
dev = ["release-version"]

[project.urls]
Homepage = "https://github.com/actris-cloudnet/mwrpy"
Documentation = "https://actris-cloudnet.github.io/mwrpy/"
Repository = "https://github.com/actris-cloudnet/mwrpy"
Changelog = "https://github.com/actris-cloudnet/mwrpy/blob/main/CHANGELOG.md"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "metpy.*", "mpl_toolkits.*", "netCDF4.*", "pandas.*", "scipy.*", "suncalc.*"]
ignore_missing_imports = true

[tool.release-version]
filename = "mwrpy/version.py"
pattern = ["MAJOR = (?P<major>\\d+)", "MINOR = (?P<minor>\\d+)", "PATCH = (?P<patch>\\d+)"]
changelog = "CHANGELOG.md"

[tool.ruff.lint]
select = ["D", "I"]
ignore = [
  "D100", # allow missing documentation
  "D101", # allow missing documentation
  "D102", # allow missing documentation
  "D103", # allow missing documentation
  "D104", # allow missing documentation
  "D105", # allow missing documentation
  "D106", # allow missing documentation
  "D107", # allow missing documentation
  "D205", # allow long multi-line summary
  "D211", # conflicting documentation rule
  "D213", # conflicting documentation rule
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.dynamic]
version = {attr = "mwrpy.version.__version__"}

[tool.setuptools.packages]
find = {}

[tool.tomlsort]
trailing_comma_inline_array = true
sort_inline_arrays = true
